--- a/index.html
+++ b/index.html
@@ -16,30 +16,39 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <!--<a class="nav-link nav_btn" href="#">Cats</a>-->
-                    <button class="nav-link nav_btn" onclick="">Cats</button>
+                    
+                    <button class="nav-link nav_btn" onclick="renderCats()">Cats</button>
                   </li>
                   <li class="nav-item">
                     <button class="nav-link nav_btn" onclick="">Dogs</button>
                   </li>
 
                 </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                <form class="d-flex">
+                  <input class="form-control me-2" id="searchInput" type="text">
+                  <button class="btn btn-outline-success" onclick="renderSearch()">Search</button>
                 </form>
               </div>
             </div>
           </nav>
     </header>
 
+    <div class="container-fluid main_container">
+        <input class="form-control" id="txt_city" type="text">
+        <button id="searchBTN" onclick="getSyncData()">Get Data</button>
+        
+    </div>
+    <div id="gif_container">
+        <h3>test</h3>
+    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+   
 </body>
 </html>
