added styling and cleaned up functions

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="container-fluid main_container form-row">
         <input class="form-control searchForm" id="txt_city" type="text">
-        <button onclick="getSyncData()">Search</button>
+        <button class="btn btn-outline-primary searchBTN" onclick="renderSearch()">Search</button>
     </div>
     <div id="gif_container">
        
