--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GIF Engine</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./Style/style.css">
 </head>
@@ -42,8 +45,8 @@
     </header>
 
     <div class="container-fluid main_container form-row">
-        <input class="form-control searchForm" id="txt_city" type="text">
-        <button class="btn btn-outline-primary searchBTN" onclick="renderSearch()">Search</button>
+        <input class="form-control searchForm" id="searchInput" type="text">
+        <button class="btn btn-primary searchBTN" onclick="renderSearch()">Search</button>
     </div>
     <div id="gif_container">
        
