added a banner to homepage

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         <button class="btn btn-primary searchBTN" onclick="renderSearch()">Search</button>
     </div>
     <div id="gif_container">
-       
+      <section class="container-fluid main-banner">
+        <h1 class="main-banner-title">Let's Find Some GIFs</h1>
+      </section>
     </div>
 
     <script src="./main.js"></script>
