--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./Style/style.css">
 </head>
-<body>
+<body class="row">
     <header class="container-fluid">
         <nav class="navbar navbar-expand-md fixed-top bg-body-tertiary">
             <div class="container-fluid">
@@ -44,12 +44,12 @@
           </nav>
     </header>
 
-    <div class="container-fluid main_container form-row">
+    <div class="container-fluid main_container col col-10">
         <input class="form-control searchForm" id="searchInput" type="text">
         <button class="btn btn-primary searchBTN" onclick="renderSearch()">Search</button>
     </div>
     <div id="gif_container">
-      <section class="container-fluid main-banner">
+      <section class="container-fluid main-banner col col-12 col-sm-10">
         <h1 class="main-banner-title">Let's Find Some GIFs</h1>
       </section>
     </div>
