--- a/index.html
+++ b/index.html
@@ -46,13 +46,20 @@
 
     <div class="container-fluid main_container col col-10">
         <input class="form-control searchForm" id="searchInput" type="text">
-        <button class="btn btn-primary searchBTN" onclick="renderSearch()">Search</button>
+        <button class="btn btn-primary searchBTN mx-auto" onclick="renderSearch()">Search</button>
     </div>
+
     <div id="gif_container">
-      <section class="container-fluid main-banner col col-12 col-sm-10">
+      <section class="container-fluid main-banner col col-12">
         <h1 class="main-banner-title">Let's Find Some GIFs</h1>
       </section>
     </div>
+
+    <footer class="container-fluid">
+      <div class="row text-center m-4">
+          <div class="col col-12 text-white">&copy; Anthony Arias 2025</div>
+      </div>
+  </footer>
 
     <script src="./main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
